tests/snapshots/snapshot_tests__array_init_disj_const.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_init_disj_const.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 0) i+0) 0)",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 2) i+0) 2)",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 0) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 2) Z) (Read_Int_Int a+0 Z)))",
    ],
}
