tests/snapshots/snapshot_tests__array_tiling_poly6.snap
---
source: tests/snapshot_tests.rs
assertion_line: 753
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_tiling_poly6.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (* (- i+0 1) (+ i+0 1))) i+0) (* (- i+0 1) (+ i+0 1)))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 (- (Read_Int_Int a+0 i+0) (* i+0 i+0))) i+0) (- (Read_Int_Int a+0 i+0) (* i+0 i+0)))",
        "(=> (not (= 0 i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (* (- i+0 1) (+ i+0 1))) 0) (Read_Int_Int a+0 0)))",
        "(=> (not (= S i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (* (- i+0 1) (+ i+0 1))) S) (Read_Int_Int a+0 S)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (* (- i+0 1) (+ i+0 1))) Z) (Read_Int_Int a+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int a+0 i+0 (- (Read_Int_Int a+0 i+0) (* i+0 i+0))) Z) (Read_Int_Int a+0 Z)))",
    ],
}
